# bootcamp-django

./: README.md  commands.txt  notes.txt
primeiro_projeto/: db.sqlite3  pyproject.toml
primeiro_projeto/projeto1/: settings.py
primeiro_projeto/rh/: admin.py  models.py
primeiro_projeto/rh/migrations/: 0001_initial.py  0002_alter_pessoa_apelido_contato.py
